@@ -1,3 +1,8 @@
+2002-12-09  Andrew Cagney  <cagney@redhat.com>
+
+	* gdbarch.sh (gdbarch_dump): Print NAME_OF_MALLOC using %s.
+	* gdbarch.c: Re-generate.
+
 2002-12-09  David Carlton  <carlton@math.stanford.edu>
 
 	* p-exp.y: Rename TRUE and FALSE to TRUEKEYWORD and FALSEKEYWORD.
